--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     
                 </p>
                 <div class="btn-con">
-                    <a href="https://drive.google.com/file/d/15l_tiFiwy79q3p5rhHMJSZuL-_UyV7fH/view?usp=share_link" target="_blank" class="main-btn">
+                    <a href="https://drive.google.com/file/d/15_2v6z0t5lmeKrpgKF1gIQgigiL6GeM-/view?usp=sharing" target="_blank" class="main-btn">
                         <span class="btn-text">Download CV</span>
                         <span class="btn-icon"><i class="fas fa-download"></i></span>
                     </a>
