--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
                 <h2>Most <span>proud of</span><span class="bg-text">Social Activities</span></h2>
             </div>
             <p class="port-text">
-                Here is some of social life activities..
+                Here are some of social life activities..
             </p>
             <!-- Social life -->
             <h4 class="stat-title">Entrepreneurship</h4>
