--- a/index.html
+++ b/index.html
@@ -464,6 +464,17 @@
                     <div class="tl-icon">
                         <i class="fas fa-briefcase"></i>
                     </div>
+                    <p class="tl-duration">23 December 2023</p>
+                    <h5>Team Building & How to pitch session - Trainer<span> - JCI HAMMAM CHATT & JCI Sidi Hassine</span></h5>
+                    <p>
+                        Hosting a 2 part session with the first part for team building, team work & communication. While the second part was for Public speaking tips and how to pitch.
+                    </p>
+                </div>
+
+                <div class="timeline-item">
+                    <div class="tl-icon">
+                        <i class="fas fa-briefcase"></i>
+                    </div>
                     <p class="tl-duration">November 2023</p>
                     <h5>Web Dev Session - Trainer<span> - IEEE ISTIC</span></h5>
                     <p>
@@ -550,7 +561,10 @@
             </div>
 
             <!-- Gallery start -->
-            <!-- <h4 class="stat-title"> Gallery </h4> -->
+            <h4 class="stat-title"> Gallery </h4>
+            <div class="gallery">
+                
+            </div>
             <!-- Gallery end -->
         </section>
         
@@ -566,12 +580,72 @@
             <div class="portfolios">
                 <div class="portfolio-item">
                     <div class="image">
+                        <img src="img/projectS/stream.png" alt="">
+                    </div>
+                    <div class="hover-items">
+                        <h3>Streaming Site</h3>
+                        <div class="icons">
+                            <a href="https://github.com/aymenmohsni/Web-Stream" class="icon" target="_blank">
+                                <i class="fab fa-github"></i>
+                            </a>
+                            <a href="https://web-stream-two.vercel.app" target="_blank" class="icon" target="_blank">
+                                <i class="fa fa-eye"></i>
+                            </a>
+                            <!-- <a href="#" class="icon" target="_blank">
+                                <i class="fab fa-youtube"></i>
+                            </a> -->
+                        </div>
+                    </div>
+                </div>
+
+                <div class="portfolio-item">
+                    <div class="image">
+                        <img src="img/projects/bank-app.png" alt="">
+                    </div>
+                    <div class="hover-items">
+                        <h3>Bank App</h3>
+                        <div class="icons">
+                            <a href="https://github.com/aymenmohsni/Bank-App" class="icon" target="_blank">
+                                <i class="fab fa-github"></i>
+                            </a>
+                            <a href="https://bank-app-indol-seven.vercel.app" target="_blank" class="icon" target="_blank">
+                                <i class="fa fa-eye"></i>
+                            </a>
+                            <!-- <a href="#" class="icon" target="_blank">
+                                <i class="fab fa-youtube"></i>
+                            </a> -->
+                        </div>
+                    </div>
+                </div>
+
+                <div class="portfolio-item">
+                    <div class="image">
+                        <img src="img/projects/youtube.png" alt="">
+                    </div>
+                    <div class="hover-items">
+                        <h3>Youtube Clone</h3>
+                        <div class="icons">
+                            <a href="https://github.com/aymenmohsni/Youtube-Clone" class="icon" target="_blank">
+                                <i class="fab fa-github"></i>
+                            </a>
+                            <!-- <a href="" target="_blank" class="icon" target="_blank">
+                                <i class="fa fa-eye"></i>
+                            </a> -->
+                            <!-- <a href="#" class="icon" target="_blank">
+                                <i class="fab fa-youtube"></i>
+                            </a> -->
+                        </div>
+                    </div>
+                </div>
+
+                <div class="portfolio-item">
+                    <div class="image">
                         <img src="img/projects/pfehub.png" alt="">
                     </div>
                     <div class="hover-items">
                         <h3>PFE Hub</h3>
                         <div class="icons">
-                            <!-- <a href="#" class="icon">
+                            <!-- <a href="#" class="icon" target="_blank">
                                 <i class="fab fa-github"></i>
                             </a> -->
                             <a href="https://pfehub.tn" target="_blank" class="icon">
@@ -590,10 +664,10 @@
                     <div class="hover-items">
                         <h3>NS Animeaux</h3>
                         <div class="icons">
-                            <!-- <a href="#" class="icon">
+                            <!-- <a href="#" class="icon" target="_blank">
                                 <i class="fab fa-github"></i>
                             </a>
-                            <a href="#" class="icon">
+                            <a href="#" class="icon" target="_blank">
                                 <i class="fa fa-eye"></i>
                             </a>
                             <a href="#" class="icon">
@@ -612,7 +686,7 @@
                             <!-- <a href="#" class="icon">
                                 <i class="fab fa-github"></i>
                             </a>
-                            <a href="#" class="icon">
+                            <a href="#" class="icon" target="_blank">
                                 <i class="fa fa-eye"></i>
                             </a>
                             <a href="#" class="icon">
@@ -628,15 +702,15 @@
                     <div class="hover-items">
                         <h3>Quiz App</h3>
                         <div class="icons">
-                            <!-- <a href="#" class="icon">
+                            <a href="https://github.com/aymenmohsni/quiz-app" class="icon" target="_blank">
                                 <i class="fab fa-github"></i>
                             </a>
-                            <a href="#" class="icon">
+                            <a href="https://aymenmohsni.github.io/quiz-app/" class="icon" target="_blank">
                                 <i class="fa fa-eye"></i>
                             </a>
-                            <a href="#" class="icon">
+                            <!-- <a href="#" class="icon" target="_blank">
                                 <i class="fab fa-youtube"></i>
-                            </a> -->
+                            </a>  -->
                         </div>
                     </div>
                 </div>
@@ -647,10 +721,10 @@
                     <div class="hover-items">
                         <h3>Restaurant Website</h3>
                         <div class="icons">
-                            <!-- <a href="#" class="icon">
+                            <!-- <a href="#" class="icon" target="_blank">
                                 <i class="fab fa-github"></i>
                             </a>
-                            <a href="#" class="icon">
+                            <a href="#" class="icon" target="_blank">
                                 <i class="fa fa-eye"></i>
                             </a>
                             <a href="#" class="icon">
@@ -666,13 +740,13 @@
                     <div class="hover-items">
                         <h3>Todo App </h3>
                         <div class="icons">
-                            <!-- <a href="#" class="icon">
+                            <a href="https://github.com/aymenmohsni/To-do-App" class="icon" target="_blank">
                                 <i class="fab fa-github"></i>
                             </a>
-                            <a href="#" class="icon">
+                            <a href="https://aymenmohsni.github.io/To-do-App/" class="icon" target="_blank">
                                 <i class="fa fa-eye"></i>
                             </a>
-                            <a href="#" class="icon">
+                            <!-- <a href="#" class="icon" target="_blank">
                                 <i class="fab fa-youtube"></i>
                             </a> -->
                         </div>
@@ -685,13 +759,13 @@
                     <div class="hover-items">
                         <h3>Todo App 2</h3>
                         <div class="icons">
-                            <!-- <a href="#" class="icon">
+                            <a href="https://github.com/aymenmohsni/to-do-list" class="icon" target="_blank">
                                 <i class="fab fa-github"></i>
                             </a>
-                            <a href="#" class="icon">
+                            <a href="https://aymenmohsni.github.io/to-do-list/" class="icon" target="_blank">
                                 <i class="fa fa-eye"></i>
                             </a>
-                            <a href="#" class="icon">
+                            <!-- <a href="#" class="icon" target="_blank">
                                 <i class="fab fa-youtube"></i>
                             </a> -->
                         </div>
@@ -705,13 +779,33 @@
                     <div class="hover-items">
                         <h3>Countdown App</h3>
                         <div class="icons">
-                            <!-- <a href="#" class="icon">
+                            <a href="https://github.com/aymenmohsni/Countdown-timer" class="icon" target="_blank">
                                 <i class="fab fa-github"></i>
                             </a>
-                            <a href="#" class="icon">
+                            <a href="https://aymenmohsni.github.io/Countdown-timer/" class="icon" target="_blank">
                                 <i class="fa fa-eye"></i>
                             </a>
-                            <a href="#" class="icon">
+                            <!--<a href="#" class="icon" target="_blank">
+                                <i class="fab fa-youtube"></i>
+                            </a> -->
+                        </div>
+                    </div>
+                </div>
+
+                <div class="portfolio-item">
+                    <div class="image">
+                        <img src="img/projects/notes.png" alt="">
+                    </div>
+                    <div class="hover-items">
+                        <h3>Notes App</h3>
+                        <div class="icons">
+                            <a href="https://github.com/aymenmohsni/notes-app" class="icon" target="_blank">
+                                <i class="fab fa-github"></i>
+                            </a>
+                            <a href="https://aymenmohsni.github.io/notes-app/" class="icon" target="_blank">
+                                <i class="fa fa-eye"></i>
+                            </a>
+                            <!--<a href="#" class="icon" target="_blank">
                                 <i class="fab fa-youtube"></i>
                             </a> -->
                         </div>
@@ -725,13 +819,13 @@
                     <div class="hover-items">
                         <h3>Calculator App</h3>
                         <div class="icons">
-                            <!-- <a href="#" class="icon">
+                            <a href="https://github.com/aymenmohsni/Calculator-App" class="icon" target="_blank">
                                 <i class="fab fa-github"></i>
                             </a>
-                            <a href="#" class="icon">
+                            <a href="https://aymenmohsni.github.io/Calculator-App/" class="icon" target="_blank">
                                 <i class="fa fa-eye"></i>
                             </a>
-                            <a href="#" class="icon">
+                            <!-- <a href="#" class="icon" target="_blank">
                                 <i class="fab fa-youtube"></i>
                             </a> -->
                         </div>
@@ -745,13 +839,13 @@
                     <div class="hover-items">
                         <h3>Clock App</h3>
                         <div class="icons">
-                            <!-- <a href="#" class="icon">
+                            <a href="https://github.com/aymenmohsni/Clock-App" class="icon" target="_blank">
                                 <i class="fab fa-github"></i>
                             </a>
-                            <a href="#" class="icon">
+                            <a href="https://aymenmohsni.github.io/Clock-App/" class="icon" target="_blank">
                                 <i class="fa fa-eye"></i>
                             </a>
-                            <a href="#" class="icon">
+                            <!-- <a href="#" class="icon" target="_blank">
                                 <i class="fab fa-youtube"></i>
                             </a> -->
                         </div>
