--- a/index.html
+++ b/index.html
@@ -585,8 +585,8 @@
                     <div class="hover-items">
                         <h3>Streaming Site</h3>
                         <div class="icons">
-                            <a href="https://github.com/aymenmohsni/Web-Stream" class="icon" target="_blank">
-                                <i class="fab fa-github"></i>
+                            <!--<a href="https://github.com/aymenmohsni/Web-Stream" class="icon" target="_blank">
+                                <i class="fab fa-github"></i>-->
                             </a>
                             <a href="https://web-stream-two.vercel.app" target="_blank" class="icon" target="_blank">
                                 <i class="fa fa-eye"></i>
@@ -605,8 +605,8 @@
                     <div class="hover-items">
                         <h3>Bank App</h3>
                         <div class="icons">
-                            <a href="https://github.com/aymenmohsni/Bank-App" class="icon" target="_blank">
-                                <i class="fab fa-github"></i>
+                            <!--<a href="https://github.com/aymenmohsni/Bank-App" class="icon" target="_blank">
+                                <i class="fab fa-github"></i>-->
                             </a>
                             <a href="https://bank-app-indol-seven.vercel.app" target="_blank" class="icon" target="_blank">
                                 <i class="fa fa-eye"></i>
