--- a/index.html
+++ b/index.html
@@ -561,11 +561,11 @@
             </div>
 
             <!-- Gallery start -->
-            <h4 class="stat-title"> Gallery </h4>
+            <!--<h4 class="stat-title"> Gallery </h4>
             <div class="gallery">
                 
             </div>
-            <!-- Gallery end -->
+            <!-- Gallery end --> -->
         </section>
         
 
