--- a/index.html
+++ b/index.html
@@ -659,7 +659,7 @@
                 </div>
                 <div class="portfolio-item">
                     <div class="image">
-                        <img src="img/projects/project2.png" alt="">
+                        <img src="img/projects/nsanimaux.png" alt="">
                     </div>
                     <div class="hover-items">
                         <h3>NS Animeaux</h3>
