--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                     <div class="tl-icon">
                         <i class="fas fa-briefcase"></i>
                     </div>
-                    <p class="tl-duration">July 2023 - August 2023</p>
+                    <p class="tl-duration">February 2024 - March 2024</p>
                     <h5>Web Developer<span> - NS Animeaux</span></h5>
                     <p>
                         Working on a website for a pet shop as a freelance project. <br>
@@ -665,12 +665,12 @@
                         <h3>NS Animeaux</h3>
                         <div class="icons">
                             <!-- <a href="#" class="icon" target="_blank">
-                                <i class="fab fa-github"></i>
+                                <i class="fab fa-github"></i>-->
                             </a>
-                            <a href="#" class="icon" target="_blank">
+                            <a href="https://nsanimaux.tn" class="icon" target="_blank">
                                 <i class="fa fa-eye"></i>
                             </a>
-                            <a href="#" class="icon">
+                            <!--<a href="#" class="icon">
                                 <i class="fab fa-youtube"></i>
                             </a> -->
                         </div>
