--- a/index.html
+++ b/index.html
@@ -132,6 +132,18 @@
 
             <!-- my Timeline -->
             <h4 class="stat-title">My Timeline</h4>
+            <div class="timeline-item">
+                    <div class="tl-icon">
+                        <i class="fas fa-briefcase"></i>
+                    </div>
+                    <p class="tl-duration">February 2024 - March 2024</p>
+                    <h5>Web Developer<span> - NS Animeaux</span></h5>
+                    <p>
+                        Working on a website for a pet shop as a freelance project. <br>
+                        The Website containts different categories with products in each one, as well as a contact page to purchase the item you want. <br>
+                        Technologies : MERN Stack
+                    </p>
+            </div>
             <div class="timeline">
                 <div class="timeline-item">
                     <div class="tl-icon">
@@ -150,12 +162,11 @@
                     <div class="tl-icon">
                         <i class="fas fa-briefcase"></i>
                     </div>
-                    <p class="tl-duration">February 2024 - March 2024</p>
-                    <h5>Web Developer<span> - NS Animeaux</span></h5>
+                    <p class="tl-duration">June 2023 - August 2023</p>
+                    <h5>Web Developer<span> - Multi Solutions</span></h5>
                     <p>
-                        Working on a website for a pet shop as a freelance project. <br>
-                        The Website containts different categories with products in each one, as well as a contact page to purchase the item you want. <br>
-                        Technologies : Vanilla JS
+                        Established a stock management system for a shoe repair shop in Lausanne, Switzerland.<br>
+                        Technologies : NextJS
                     </p>
                 </div>
                 <div class="timeline-item">
