--- a/index.html
+++ b/index.html
@@ -660,7 +660,7 @@
                             <!-- <a href="#" class="icon" target="_blank">
                                 <i class="fab fa-github"></i>
                             </a> -->
-                            <a href="https://pfehub.tn" target="_blank" class="icon">
+                            <a href="https://pfe-hub.vercel.app" target="_blank" class="icon">
                                 <i class="fa fa-eye"></i>
                             </a>
                             <!-- <a href="#" class="icon">
