--- a/index.html
+++ b/index.html
@@ -162,23 +162,8 @@
                     <p class="tl-duration">March 2024 - December 2024</p>
                     <h5>Technical Evangelist<span> - U-Accelerator</span></h5>
                     <p>
-                        UX Strategy and Reporting: Developed and implemented comprehensive
-                        UX strategies to enhance user engagement and improve functionality on our
-                        open innovation platform. Created detailed reports and actionable strate-
-                        gies to optimize the user experience for diverse stakeholders, including re-
-                        searchers, professors, and industry experts. </p>
-                        <p> • Grant Development and Writing: Identified funding opportunities and led the
-                        preparation of grant proposals, ensuring clear alignment with U-Accelerator’s
-                        mission and objectives. Managed the end-to-end grant writing process, in-
-                        cluding research, proposal drafting, and documentation. </p>
-                       <p>  • Team and Task Management: Coordinated and managed tasks across vari-
-                        ous teams, including marketing, social media, and web development, to align
-                        project goals and ensure efficient workflow. Oversaw cross-functional efforts
-                        to keep teams aligned with strategic priorities. </p>
-                        <p> • Educational Content Creation: Produced engaging video tutorials and educa-
-                        tional resources to empower platform users. Delivered instructional content
-                        to help experts, researchers, and academic professionals navigate and utilize
-                        the open innovation platform effectively
+                        Developed and implemented UX strategies to enhance user engagement on an open innovation platform. Led grant writing efforts, securing funding opportunities and aligning proposals with organizational goals. Managed cross-functional teams across marketing, social media, and web development to ensure efficient workflow. Created educational content, including video tutorials and resources, to empower researchers and industry experts.
+
                     </p>
                 </div>
                 <div class="timeline-item">
